FIX: missing sponsors on mobile view

--- a/src/Pages/Sponsors/Sponsors.module.scss
+++ b/src/Pages/Sponsors/Sponsors.module.scss
@@ -207,4 +207,8 @@
   .prevSponsors {
     display: none;
   }
+  .lastcolmobile {
+    width: 45%;
+    margin: auto;
+  }
 }
